--- a/sections/collection-list.liquid
+++ b/sections/collection-list.liquid
@@ -55,6 +55,9 @@
         {% endif %}
         <div class="grid-uniform">
           {% for product in collection.products %}
+            {%- comment %}<locksmith:7971>{% endcomment -%}
+              {% include 'locksmith-variables', locksmith_scope: 'subject', locksmith_subject: product %}{% if locksmith_transparent %}{% else %}{% continue %}{% endif %}
+            {%- comment %}</locksmith:7971>{% endcomment -%}
             {% include 'product-list-item' %}
           {% else %}
             <div class="grid__item">
