--- a/sections/index-collection.liquid
+++ b/sections/index-collection.liquid
@@ -40,6 +40,9 @@
     {% endif %}
     <div class="grid-uniform{% if settings.image_autoheight_enable %} image_autoheight_enable{% endif %}">
       {% for product in collection.products  limit: product_limit %}
+        {%- comment %}<locksmith:8ba7>{% endcomment -%}
+          {% include 'locksmith-variables', locksmith_scope: 'subject', locksmith_subject: product %}{% if locksmith_transparent %}{% else %}{% continue %}{% endif %}
+        {%- comment %}</locksmith:8ba7>{% endcomment -%}
         {% include 'product-grid-item' %}
       {% else %}
         {{ 'theme-onboarding.css' | asset_url | stylesheet_tag }}
