--- a/snippets/collections-sidebar.liquid
+++ b/snippets/collections-sidebar.liquid
@@ -14,12 +14,18 @@
   <h5>{{ linklists[custom_nav_list].title }}</h5>
   <ul class="collection-nav accessibleNav">
     {% for link in linklists[custom_nav_list].links %}
+      {%- comment %}<locksmith:a1a5>{% endcomment -%}
+        {% include 'locksmith-variables', locksmith_scope: 'subject', locksmith_subject: link %}{% if locksmith_transparent %}{% else %}{% continue %}{% endif %}
+      {%- comment %}</locksmith:a1a5>{% endcomment -%}
       {% assign child_list_handle = link.title | handleize %}
       {% if linklists[child_list_handle].links != blank %}
         <li {% if link.active %}class="collection-nav--active"{% endif %} aria-haspopup="true">
           <a href="{{ link.url }}">{{ link.title }}</a>
           <ul class="collection-nav--child">
             {% for childlink in linklists[child_list_handle].links %}
+              {%- comment %}<locksmith:abf9>{% endcomment -%}
+                {% include 'locksmith-variables', locksmith_scope: 'subject', locksmith_subject: childlink %}{% if locksmith_transparent %}{% else %}{% continue %}{% endif %}
+              {%- comment %}</locksmith:abf9>{% endcomment -%}
               <li {% if childlink.active %}class="collection-nav--active"{% endif %}><a href="{{ childlink.url }}">{{ childlink.title | escape }}</a></li>
             {% endfor %}
           </ul>
