--- a/snippets/product-related-items.liquid
+++ b/snippets/product-related-items.liquid
@@ -56,6 +56,9 @@
     Count related products to set grid width
   {% endcomment %}
   {% for product in collection.products %}
+    {%- comment %}<locksmith:0090>{% endcomment -%}
+      {% include 'locksmith-variables', locksmith_scope: 'subject', locksmith_subject: product %}{% if locksmith_transparent %}{% else %}{% continue %}{% endif %}
+    {%- comment %}</locksmith:0090>{% endcomment -%}
     {% unless product.handle == current_product.handle %}
        {% unless same_vendor and current_product.vendor != product.vendor %}
          {% unless same_type and current_product.type != product.type %}
@@ -103,6 +106,9 @@
   
   {% capture related_items %}
     {% for product in collection.products %}
+      {%- comment %}<locksmith:51ae>{% endcomment -%}
+        {% include 'locksmith-variables', locksmith_scope: 'subject', locksmith_subject: product %}{% if locksmith_transparent %}{% else %}{% continue %}{% endif %}
+      {%- comment %}</locksmith:51ae>{% endcomment -%}
       {% unless product.handle == current_product.handle %}
          {% unless same_vendor and current_product.vendor != product.vendor %}
            {% unless same_type and current_product.type != product.type %}
