--- a/templates/search.liquid
+++ b/templates/search.liquid
@@ -1,3 +1,7 @@
+{%- comment %}<locksmith:8f66>{% endcomment -%}
+  {% if search.results %}{% paginate search.results by 10 %}{% assign locksmith_search__results_count = 0 %}{% for result in search.results %}{% include 'locksmith-variables', locksmith_scope: 'subject', locksmith_subject: result %}{% if locksmith_transparent %}{% else %}{% continue %}{% endif %}{% assign locksmith_search__results_count = locksmith_search__results_count | plus: 1 %}{% endfor %}{% endpaginate %}{% endif %}
+{%- comment %}</locksmith:8f66>{% endcomment -%}
+
 <!-- /templates/search.liquid -->
 {% comment %}
 
@@ -26,7 +30,7 @@
 
         {% paginate search.results by 10 %}
 
-          {% if search.results_count == 0 %}
+          {% if locksmith_search__results_count == 0 %}
 
             <h1 class="h2 title text-center">{{ 'general.search.no_results_html' | t: terms: search.terms }}</h1>
             {% include 'search-bar' %}
@@ -42,6 +46,9 @@
             {% if grid_results == false %}
 
               {% for item in search.results %}
+                {%- comment %}<locksmith:586c>{% endcomment -%}
+                  {% include 'locksmith-variables', locksmith_scope: 'subject', locksmith_subject: item %}{% if locksmith_transparent %}{% else %}{% continue %}{% endif %}
+                {%- comment %}</locksmith:586c>{% endcomment -%}
                 {% include 'search-result' %}
               {% endfor %}
 
@@ -49,6 +56,9 @@
 
               <div class="grid-uniform">
                 {% for item in search.results %}
+                  {%- comment %}<locksmith:18e0>{% endcomment -%}
+                    {% include 'locksmith-variables', locksmith_scope: 'subject', locksmith_subject: item %}{% if locksmith_transparent %}{% else %}{% continue %}{% endif %}
+                  {%- comment %}</locksmith:18e0>{% endcomment -%}
                   {% include 'search-result-grid' %}
                 {% endfor %}
               </div>
