--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -71,6 +71,7 @@
 
   <!-- Header hook for plugins ============================================== -->
   {{ content_for_header }}
+  {% include 'rewardify-privileged-discounts' %}
 </head>
 
 <body id="{{ page_title | handle }}" class="{% if customer %}customer-logged-in {% endif %}template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}" >
