--- a/snippets/product.liquid
+++ b/snippets/product.liquid
@@ -12,6 +12,20 @@
   {% assign form_id = "AddToCartForm-{{ section.id }" %}
 {% endif %}
 
+{% if product.tags.size > 0 and customer.tags.size > 0 %}
+<p>
+    
+    <script>
+    var privilegedPrice = Rewardify.getPrivilegedPrice(['{{product.tags | join: "','"}}'], {{ current_variant.price }});
+    if (typeof privilegedPrice !== 'undefined') {
+      document.write("<span>Privileged Price</span>");
+      document.write("<span id='PrivilegedProductPrice' class='product-single__price'>" + privilegedPrice + "</span>");
+    }
+    </script>
+    
+<p>
+{% endif %}
+
 <div itemscope itemtype="http://schema.org/Product" class="product-page">
   <div class="wrapper">
 
