download theme updates, odd locksmith tags...

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -84,7 +84,7 @@
         {% endfor %}
         <!-- Remove the following two lines to delete Shopify and Pipeline credit -->
           <li>{{ powered_by_link }}</li>
-          <li><a href="http://corknine.com">{{ 'layout.footer.credit' | t }}</a></li>
+          {% comment %}<li><a href="http://corknine.com">{{ 'layout.footer.credit' | t }}</a></li>{% endcomment %}
         <!-- stop deleting here :) -->
       </ul>
 
