--- a/snippets/nav-contents.liquid
+++ b/snippets/nav-contents.liquid
@@ -1,7 +1,6 @@
 <div class="mobile-wrapper">
   <div class="header-cart__wrapper">
-    {% comment %}<a href="/cart" class="CartToggle header-cart"></a>{% endcomment %}
-    <a href="/cart" class="header-cart"></a>
+    <a href="/cart" class="CartToggle header-cart"></a>
     <span class="header-cart__bubble cartCount{% if cart.item_count < 1 %} hidden-count{% endif %}"></span>
   </div>
   <div class="logo-wrapper{% if section.settings.logo %} logo-wrapper--image{% endif %}">
