--- a/snippets/product-related-items.liquid
+++ b/snippets/product-related-items.liquid
@@ -34,6 +34,9 @@
 {% endif %}
 {% unless found_a_collection %}
   {% for c in product.collections %}
+    {%- comment %}<locksmith:8a11>{% endcomment -%}
+      {% include 'locksmith-variables', locksmith_scope: 'subject', locksmith_subject: c %}{% if locksmith_transparent %}{% else %}{% continue %}{% endif %}
+    {%- comment %}</locksmith:8a11>{% endcomment -%}
     {% unless exclusions contains c.handle or c.all_products_count < 2 %}
       {% assign found_a_collection = true %}
       {% assign collection = c %}
@@ -56,9 +59,9 @@
     Count related products to set grid width
   {% endcomment %}
   {% for product in collection.products %}
-    {%- comment %}<locksmith:0090>{% endcomment -%}
+    {%- comment %}<locksmith:0416>{% endcomment -%}
       {% include 'locksmith-variables', locksmith_scope: 'subject', locksmith_subject: product %}{% if locksmith_transparent %}{% else %}{% continue %}{% endif %}
-    {%- comment %}</locksmith:0090>{% endcomment -%}
+    {%- comment %}</locksmith:0416>{% endcomment -%}
     {% unless product.handle == current_product.handle %}
        {% unless same_vendor and current_product.vendor != product.vendor %}
          {% unless same_type and current_product.type != product.type %}
@@ -106,9 +109,9 @@
   
   {% capture related_items %}
     {% for product in collection.products %}
-      {%- comment %}<locksmith:51ae>{% endcomment -%}
+      {%- comment %}<locksmith:a1b3>{% endcomment -%}
         {% include 'locksmith-variables', locksmith_scope: 'subject', locksmith_subject: product %}{% if locksmith_transparent %}{% else %}{% continue %}{% endif %}
-      {%- comment %}</locksmith:51ae>{% endcomment -%}
+      {%- comment %}</locksmith:a1b3>{% endcomment -%}
       {% unless product.handle == current_product.handle %}
          {% unless same_vendor and current_product.vendor != product.vendor %}
            {% unless same_type and current_product.type != product.type %}
