--- a/snippets/collections-sidebar.liquid
+++ b/snippets/collections-sidebar.liquid
@@ -14,18 +14,18 @@
   <h5>{{ linklists[custom_nav_list].title }}</h5>
   <ul class="collection-nav accessibleNav">
     {% for link in linklists[custom_nav_list].links %}
-      {%- comment %}<locksmith:a1a5>{% endcomment -%}
+      {%- comment %}<locksmith:25cc>{% endcomment -%}
         {% include 'locksmith-variables', locksmith_scope: 'subject', locksmith_subject: link %}{% if locksmith_transparent %}{% else %}{% continue %}{% endif %}
-      {%- comment %}</locksmith:a1a5>{% endcomment -%}
+      {%- comment %}</locksmith:25cc>{% endcomment -%}
       {% assign child_list_handle = link.title | handleize %}
       {% if linklists[child_list_handle].links != blank %}
         <li {% if link.active %}class="collection-nav--active"{% endif %} aria-haspopup="true">
           <a href="{{ link.url }}">{{ link.title }}</a>
           <ul class="collection-nav--child">
             {% for childlink in linklists[child_list_handle].links %}
-              {%- comment %}<locksmith:abf9>{% endcomment -%}
+              {%- comment %}<locksmith:8677>{% endcomment -%}
                 {% include 'locksmith-variables', locksmith_scope: 'subject', locksmith_subject: childlink %}{% if locksmith_transparent %}{% else %}{% continue %}{% endif %}
-              {%- comment %}</locksmith:abf9>{% endcomment -%}
+              {%- comment %}</locksmith:8677>{% endcomment -%}
               <li {% if childlink.active %}class="collection-nav--active"{% endif %}><a href="{{ childlink.url }}">{{ childlink.title | escape }}</a></li>
             {% endfor %}
           </ul>
@@ -47,6 +47,9 @@
         <a href="/collections/all">{{ 'collections.sidebar.all_collections' | t }}</a>
       </li>
       {% for collection_link in collections %}
+        {%- comment %}<locksmith:b211>{% endcomment -%}
+          {% include 'locksmith-variables', locksmith_scope: 'subject', locksmith_subject: collection_link %}{% if locksmith_transparent %}{% else %}{% continue %}{% endif %}
+        {%- comment %}</locksmith:b211>{% endcomment -%}
         {% unless collection_link.handle == 'frontpage' %}
           <li {% if collection.handle == collection_link.handle %}class="collection-nav--active"{% endif %}>
             <a href="/collections/{{ collection_link.handle }}">{{ collection_link.title }}</a>
