Add Padding to Privilaged Discount Page

--- a/assets/style.scss.liquid
+++ b/assets/style.scss.liquid
@@ -5352,3 +5352,8 @@ Collection grid section
 /*.cart__row:last {
   background-color: orange;
 }*/
+
+#rw-privileged-checkout-form {
+  padding-left: 50px;
+  padding-right: 50px;
+}
