Add minimal CSS for RW PrivCheck

--- a/assets/style.scss.liquid
+++ b/assets/style.scss.liquid
@@ -5353,3 +5353,11 @@ Collection grid section
   padding-left: 50px;
   padding-right: 50px;
 }
+
+#pc-amount-input-field {
+ float: right; 
+}
+
+.rewardify-privileged-checkout {
+  float: right;
+}
