Clean HTML- as per Code Validator

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -6,7 +6,7 @@
 
       {% if shop.customer_accounts_enabled and section.settings.header_enable_account %}
         <div class="header-account-link">
-          <a href="/account"><img src="{{ 'account.svg' | asset_url }}"></a>
+          <a href="/account"><img src="{{ 'account.svg' | asset_url }}" alt="account"></a>
         </div>
       {% endif %}
 
