--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -184,4 +184,18 @@
   </div>
 {% endif %}
 
+<a href="http://www.rewardify.ca" onclick="fakePopUnder(this.href); return false;">Using Store Credit to Pay?</a>
+<br>
+<a href="http://www.rewardify.ca" onclick="fakePopUnder(this.href); return false;">Checkout with a PO# (NET-30 Terms)?</a>
 
+<script>
+
+  function fakePopUnder(url) {
+    
+    console.log(url)
+    var currentURL = document.URL;
+    this.location = url;
+    window.open(currentURL, '_blank');
+  };
+
+</script>
