Auto-Tag New Customers w/ 'retail'

--- a/templates/customers/register.liquid
+++ b/templates/customers/register.liquid
@@ -23,6 +23,8 @@
         <label for="CreatePassword" class="label--hidden">{{ 'customer.register.password' | t }}</label>
         <input type="password" name="customer[password]" id="CreatePassword" placeholder="{{ 'customer.register.password' | t }}" {% if form.errors contains "password" %} class="error"{% endif %}>
 
+        <input type="hidden" id="customer_tags" name="customer[tags]" value="retail"/>
+
         <p>
           <input type="submit" value="{{ 'customer.register.submit' | t }}" class="btn btn--full">
         </p>
